uncommting some tests..and changing appl.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs?useUnicode=true&&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=techjobs
 spring.datasource.password=LC101#$4@22
 
@@ -16,3 +16,9 @@ spring.jpa.hibernate.ddl-auto = update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
+
+#
+#jdbc:mysql://localhost:3306/techjobs?useUnicode=true&&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
