--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs?useUnicode=true&&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
 spring.datasource.username=techjobs
-spring.datasource.password=LC101#$4@22
+spring.datasource.password=techjobs
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -21,4 +21,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
 
 #
+#jdbc:mysql://localhost:3306/techjobs?useUnicode=true&&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
 #jdbc:mysql://localhost:3306/techjobs?useUnicode=true&&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
